Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 You assign a callback which takes a filename as a single parameter, which is applied to all the changed files.
 You can also specify globbing patterns within each tree, to ensure only the selected files are returned.</p>
 
-<p>** Usage **</p>
+<p><strong>Usage</strong></p>
 
-<p>For simple file watching to monitor all files in a directory.
+<p>For simple file watching to monitor all files in a directory:
     <code>npm install mononoke</code></p>
 
 <pre><code>var mononoke = require('mononoke');
